attempt to fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ html {
 
 body {
   font-family: 'Neue Haas';
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background-color: #ff3500;
   cursor: url('../images/cursors-02.png'), move;
 }
@@ -137,6 +137,7 @@ header {
 .marquee-wrapper {
   background-color: #ff3500;
   padding-bottom: 5px;
+  overflow-x: hidden;
 }
 
 .marquee span {
@@ -200,7 +201,7 @@ ul {
   position: relative;
   background-color: #ff3500;
   z-index: 1000;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .hero-txt {
